ISPN-16307 Fix parsing of multi-value attributes